<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Act It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="act_it_description">Game Image</string>
    <string name="title_activity_main">Main</string>
    <string name="example_name">John</string>
    <string name="your_move">Your Move</string>
    <string name="their_move">Their Move</string>
    <string name="play">Play</string>
    <string name="create_game">Create Game</string>
    <string name="title_activity_new_game">New_game</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="random_opponent">Random Opponent</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_facebook_friends_new_game">Facebook_friends_new_game</string>
    <string name="recently_active">Recently Active</string>
    <string name="invite_to_play">Invite to Play!</string>
    <string name="david">David</string>
    <string name="mike">Mike</string>
    <string name="title_activity_facebook_friend_invie">Facebook_friend_invie</string>
    <string name="title_activity_play_game">Play_game</string>
    <string name="act_one">Act One</string>
    <string name="categories">Categories</string>
    <string name="easy">Easy</string>
    <string name="medium">Med </string>
    <string name="hard">Hard</string>
    <string name="word_dog">Dog</string>
    <string name="word_zebra">Zebra</string>
    <string name="word_hippo">Hippo</string>
    <string name="movies">Movies</string>
    <string name="animals">Animals</string>
    <string name="books">Books</string>
    <string name="title_activity_tap_to_act">Tap_to_act</string>
    <string name="time">Time Remaining:</string>
    <string name="ready">Ready!</string>
    <string name="title_activity_tap_to_guess">Tap_to_guess</string>
    <string name="title_activity_give_up">Give_up</string>
    <string name="nice_try">Nice Try</string>
    <string name="log_in">Log In</string>
    <string name="facebook_app_id">608868299241580</string>
    <string name="MainActivity">MainActivity</string>
    <string name="continue1">Continue</string>
    <string name="act_a_word">Act a word</string>
    <string name="guess_a_word">Guess a word</string>
    <string name="the_word_was">The word was </string>
    <string name="word">WORD</string>
    <string name="pick_a_word">Pick a word to Act</string>

</resources>
